--- a/style.css
+++ b/style.css
@@ -239,11 +239,11 @@ html, body {height: 100%; width: 100%; font-size: 1rem; font-family: 'Exo', sans
     border-left: 0 none;
 }
 .one {
-  background-image: url(slide/imh6.jpg);}
+  background-image: url(slide/img11.jpg);}
 .two {
-  background-image: url(http://farm9.staticflickr.com/8064/8179351735_c8c069dc61_z.jpg);}
+  background-image: url(slide/img14.jpg);}
 .three {
-  background-image: url(http://farm9.staticflickr.com/8061/8188068610_70eda46a1f_z.jpg);}
+  background-image: url(slide/imh6.jpg);}
 .four {
   background-image: url(http://farm9.staticflickr.com/242/535485602_9328a91e65_z.jpg);}
 .five {
