--- a/style.css
+++ b/style.css
@@ -194,46 +194,43 @@ body {
 
 
 */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@media(max-width: 800px)
+{
+  .carousel-item img{
+    height: 500px; 
+  }
 }
 
-.img-slider {
-    position: relative;
-    width: 100vw;
-    height: 400px;
+.carousel-item img{
+	height: 540px;
+  min-height:300px ;
+	
 }
-.img-slider .slider-container {
-    position: absolute;
-    width: 300%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    animation: slider 26s infinite;
+.carousel-caption {
+	bottom: 220px;
 }
-.img-slider .slider-container .slide {
-    position: relative;
-    width: 33.33333333%;
-    height: 450px;
-    float: left;
-    overflow: hidden
+.carousel-caption h5 {
+	font-size: 45px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-top: 25px;
+	font-family: merienda;
 }
-.img-slider .slider-container .slide img {
-  display: block;
-  width: 100%;
-  height: 450px;
+.carousel-caption p {
+	width: 60%;
+	margin: auto;
+	font-size: 18px;
+	line-height: 1.9;
+	font-family: poppins;
 }
-@keyframes slider {
-    0%, 25%, 100%{left: 0}
-    
-    30%, 55%{left: -100%}
-    
-    60%, 85%{left: -200%}
+.carousel-caption a {
+	text-transform: uppercase;
+	background: #262626;
+	padding: 10px 30px;
+	display: inline-block;
+	color: #fff;
+	margin-top: 15px;
 }
-
 
 
 .work{
